@@ -2,6 +2,8 @@ Routes Changelog
 ========================
 
 -- 1.6.3 (**svn**)
+* Updated config object so that the route is attached if possible.
+* Adding standard logging usage with debug messages.
 * Added additional test for normal '.' match and fixed new special matching to
   match it properly. Thanks David Smith.
 * Fixed hanging special char issue with 'special' URL chars at the end of a URL
